--- a/01.LearnHTML&CSS/cgv/stlye.css
+++ b/01.LearnHTML&CSS/cgv/stlye.css
@@ -15,7 +15,7 @@ header{
     justify-content: space-between;
     align-items: center;
 }
-header>img{
+header>a>img{
     width: 300px;
     height: 80px;
 }
